RESOLVED FIXED16352
Toolbar dragged inspector cannot be moved beyond screen edges
https://bugs.webkit.org/show_bug.cgi?id=16352
Summary Toolbar dragged inspector cannot be moved beyond screen edges
Matt Lilek
Reported 2007-12-07 21:15:52 PST
If you drag the inspector via it's toolbar, it will not go beyond the edge of the screen.
Attachments
Sam Weinig
Comment 1 2007-12-13 17:11:10 PST
Fix landed in r28701.
Note You need to log in before you can comment on or make changes to this bug.