        Reviewed by Anders.

Fix for http://bugs.webkit.org/show_bug.cgi?id=16352
        Toolbar dragged inspector cannot be moved beyond screen edges

        * page/InspectorController.cpp:
        (WebCore::moveByUnrestricted):
        (WebCore::InspectorController::windowScriptObjectAvailable):
        (WebCore::InspectorController::moveByUnrestricted):
        * page/InspectorController.h:
        * page/inspector/inspector.js:



Canonical link: https://commits.webkit.org/22566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28701 268f45cc-cd09-0410-ab3c-d52691b4dbfc